# bzl-configure

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  package-lock.json  package.json
src/: BUILD.bazel  buildozer.ts  gen_build_files.ts  main.ts  plugin_pkg_npm.ts  plugin_ts_project.ts  tsconfig.json  types.d.ts  util.ts
test/: BUILD.bazel  gen_build_files.spec.ts  tsconfig.json
test/pkg_npm/newPkgNpmRule/: BUILD.bazel  package.json
test/ts_project/addSrc/: BUILD.bazel
test/ts_project/emitDeclOnly/: BUILD.bazel
test/ts_project/extendsChain/: BUILD.bazel  tsconfig-a.json
test/ts_project/extendsChain/subdir/: BUILD.bazel
test/ts_project/newBuildFile/: BUILD.bazel  tsconfig.json
test/ts_project/newTsProjectRule/: BUILD.bazel
test/ts_project/overlapSrcs/: BUILD.bazel
test/ts_project/overlapSrcs/subdir/: BUILD.bazel
test/ts_project/setAttributes/: BUILD.bazel  tsconfig.json
ts_project/: BUILD.bazel  gen_build_files.spec.ts  gen_build_files.ts  tsconfig-test.json  tsconfig.json
ts_project/test/addSrc/: BUILD.bazel  BUILD.in
ts_project/test/emitDeclOnly/: BUILD.bazel  a.ts  tsconfig.json
ts_project/test/extendsChain/: tsconfig-b.json
ts_project/test/extendsChain/subdir/: BUILD.bazel  tsconfig-c.json
ts_project/test/newBuildFile/: BUILD.bazel
ts_project/test/newTsProjectRule/: BUILD.bazel  BUILD.in  my.bzl
ts_project/test/overlapSrcs/: BUILD.bazel
ts_project/test/setAttributes/: BUILD.bazel  a.ts
