load("@npm_bazel_typescript//:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary", "nodejs_test")

ts_project(
    name = "tsconfig",
    srcs = [":gen_build_files.ts"],
    source_map = True,
    deps = ["@npm//:node_modules"],
)

ts_project(
    name = "tsconfig-test",
    srcs = [":gen_build_files.spec.ts"],
    extends = ["//ts_project:tsconfig.json"],
    source_map = True,
    deps = [
        ":tsconfig",
        "@npm//:node_modules",
    ],
)

# only works with --config=hide_test_packages
nodejs_test(
    name = "test",
    # Note, to make this recursive glob pick up the test files, we use a --deleted_packages trick
    data = glob(["test/**"]) + [
        "//:WORKSPACE",
        "gen_build_files.js",
        "@npm//:node_modules",
    ],
    entry_point = "gen_build_files.spec.js",
    tags = [
        # This test only works with --config=hide_test_packages
        "manual",
    ],
)

# only works with --config=hide_test_packages
nodejs_binary(
    name = "test.accept",
    args = ["accept"],
    data = [
        "gen_build_files.js",
        "@npm//:node_modules",
    ],
    entry_point = "gen_build_files.spec.js",
)
